fix weird behavior of menu on mobile

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -20,6 +20,7 @@ nav#topbar {
             }
         }
         nav#menu {
+            z-index: 100;
             a.menu {
                 color: $lab-blue;
             }
